<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JeffenNote</string>
    <string name="user_name">Jeffen Cheung</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tBookMark">Book Mark</string>
    <string name="tCheckList">Check List</string>
    <string name="tAlarm">Alarm</string>
    <string name="tLogin">Login</string>
    <string name="tImageSwitch">Image Switch</string>

    <!-- hello world -->
    <string name="hello">hello android!</string>
    <string name="goAppContactManager">▷ contact manager</string>
    <string name="goAppLogin">▷ login layout</string>
    <string name="goAppNote">JefffenNote</string>

    <!-- login -->
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="btnLogin">登录</string>
    <string name="btnCancle">CNACEL</string>
    <string name="btnSingUp">No account? Sign Up</string>
    
    

    <!-- dialog -->
    <string name="alert_dialog_detele">确定要清空全部数据？将不可恢复。</string>
    <string name="alert_dialog_ng_title1">请输入用户名和密码。</string>
    <string name="alert_dialog_ng_title2">用户名或密码错误，请重新输入！</string>
    <string name="OK">确定</string>
    <string name="alert_dialog_processing_title">Info</string>
    <string name="alert_dialog_processing_msg">the app is processing</string>
    <string name="noteHint">Click the Pen/ADD button to \n start your first note.</string>
    
    
    <string name="btnRotate">旋转</string>
    <string name="btnStop">关闭闹钟提醒</string>
    <string name="btnSave">保存</string>
    <string name="btnSort">排序</string>
    <string name="btnShift">Shift-Function</string>    
    <string name="btnDesc">Descent-Sort</string>
    <string name="btnReset">Reset-Items</string>
    <string name="btnPlus">添加</string>
    <string name="btnCamera">相机拍照</string>
    <string name="btnAlbum">相册选择</string>
    
    
    <string name="msg_saved">保存成功。</string>
    <string name="msg_saving">保存中。。。</string>
    <string name="msg_processing">processing.</string>
    <string name="noteTitle">标\n题</string>
    <string name="noteBody">笔记</string>
    
    
    <string name="menu_insert">添加笔记</string>
    <string name="menu_stars">星标笔记</string>
    <string name="menu_desc">喜旧厌新</string>
    <string name="menu_delete">删除笔记</string>
    <string name="menu_merge">合并清单</string>
    <string name="menu_copy">复制笔记</string>
    <string name="menu_drop">清理数据</string>
    <string name="menu_alarm">待办提醒</string>
    <string name="menu_login">登录</string>
    <string name="menu_help">帮助</string>
    <string name="menu_set">设置</string>
    <string name="menu_kill">KILL ME</string>
    <string name="menu_exit">退出</string>
    <string name="msgTitleHint">点击添加标题</string>
    <string name="msgBodyHint">点击添加内容</string>

</resources>