<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="search"/>
    <item
        android:id="@+id/menu_insert"
        android:icon="@drawable/pen"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_insert"/>
    <item
        android:id="@+id/More"
        android:icon="@drawable/ic_menu_moreoverflow"
        android:showAsAction="always|collapseActionView"
        android:title="More">
        <menu>
            <item
                android:id="@+id/menu_stars"
                android:icon="@drawable/star_pink"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_stars"/>
            <item
                android:id="@+id/menu_alarm"
                android:icon="@drawable/alarm"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_alarm"/>
            <item
                android:id="@+id/menu_desc"
                android:icon="@drawable/update"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_desc"/>            
            <item
                android:id="@+id/menu_copy"
                android:icon="@drawable/copy"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_copy"/>
            <item
                android:id="@+id/menu_merge"
                android:icon="@drawable/merge"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_merge"/>
            <item
                android:id="@+id/menu_delete"
                android:icon="@drawable/garbage"
                android:showAsAction="ifRoom|collapseActionView"
                android:title="@string/menu_delete"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_drop"
        android:icon="@drawable/cut"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_drop"/>
    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_menu_login"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_login"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_set"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_set"/>
    <item
        android:id="@+id/menu_kill"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_kill"/>

</menu>