<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llNoteEdit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="15px"
            android:text="@string/noteTitle" />

        <EditText
            android:id="@+id/noteTitleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15px"
            android:layout_weight="1"
            android:autoLink="all"
            android:background="@drawable/corners_bg"
            android:ems="10"
            android:gravity="top"
            android:maxHeight="55dip"
            android:padding="10px" />

        <view
            android:id="@+id/starButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginRight="15px"
            class="com.widget.star.StarButton"
            android:background="@android:color/transparent"
            android:src="@drawable/star" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15px"
            android:text="@string/noteBody" />

        <TextView
            android:id="@+id/noteWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15px"
            android:text="天气获取中..."
            android:textColor="#002FA7" />
        <!-- Yves Klein's International Klein Blue RGB （0，47，167）受专利保护 -->
    </RelativeLayout>

    <EditText
        android:id="@+id/noteBodyET"
        android:layout_width="fill_parent"
        android:layout_height="400px"
        android:layout_margin="15px"
        android:autoLink="all"
        android:background="@drawable/corners_bg"
        android:gravity="top"
        android:padding="10px"
        android:scrollbars="vertical"
        class="com.widget.text.AllLinedEditText"
android:fadingEdge="vertical"
android:capitalize="sentences" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <GridView
                android:id="@+id/photoGrid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnWidth="70dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="auto_fit"
                android:padding="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/llNoteAlarmBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSubmitNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:textColor="@color/KleinBlue" >
        </Button>

        <Button
            android:id="@+id/btnCancelNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancle"
            android:textColor="@color/KleinBlue" >
        </Button>

        <TextView
            android:id="@+id/tvMsgSaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_saving"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvMsgProcessing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_processing"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>